fix background image size on mobile

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -5,3 +5,4 @@ $playfair: 'Playfair Display', serif;
 
 $white: #fefefe;
 $break-large: 1000px;
+$break-small: 425px;
